darktheme in der local version auch includiert

--- a/nuxt-app/content/articles/4.design-tokens.md
+++ b/nuxt-app/content/articles/4.design-tokens.md
@@ -22,8 +22,8 @@ export default defineTheme({
     body: {
       // Update the background color in light & dark mode
       backgroundColor: {
-        initial: '#f8fafc',
-        dark: '#0f172a'
+        initial: '#0f172a',
+        dark: '#f8fafc'
       }
     }
   }
