anpassungen frontpage, css grundstucktur gelegt, textbox basierte seite

--- a/nuxt-app/content/1.index.md
+++ b/nuxt-app/content/1.index.md
@@ -6,26 +6,35 @@ description: Blog from Marc Nauendorf
 title: About
 ---
 
-::hero
----
-image: /alpine-0.webp
----
-#title
-Hi, I am Marc Nauendorf.
+<div class="profile-container">
+  <div class="profile-content">
+    <div class="textbox textbox--secondary">
+      <p>I'm an engineer and tech enthusiast passionate about creating innovative projects that combine hardware and software – from DIY robotics to IoT and automation. For me, efficiency and creativity are always top priorities.</p>
+    </div>
+  </div>
 
-#description
-- An [open source blog theme](https://github.com/nuxt-themes/alpine) powered by [Nuxt Content](https://content.nuxtjs.org), editable on [Nuxt Studio](https://nuxt.studio).
-- Write pages in Markdown and Vue components with the [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
-- Use [**30+ built-in**](https://elements.nuxt.space) components in your Markdown pages.
-::
+  <div class="profile-card">
+    <div class="profile-card__image">
+      <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/mePic.jpg?raw=true" alt="Marc Nauendorf">
+    </div>
+    <div class="profile-card__info">
+      <div class="profile-card__contact-item">
+        <span class="profile-card__icon">📧</span>
+        <span class="profile-card__text"><a href="mailto:Marc.Nauendorf@hs-heilbronn.de?subject=Anfrage%20von%20der%20Website">Marc.Nauendorf@hs-heilbronn.de</a></span>
+      </div>
+      <div class="profile-card__contact-item">
+        <span class="profile-card__icon">📍</span>
+        <span class="profile-card__text">Office F718a (Basement)</span>
+      </div>
+    </div>
 
-Test von deploy.sh
+  </div>
+</div>
 
-::gallery
----
-images:
-  - /alpine-0.webp
-  - /alpine-1.webp
-  - /alpine-2.webp
----
-::
+<div class="textbox textbox--primary">
+  <p>I'm currently an academic assistant at <a href="https://www.hs-heilbronn.de/en">Hochschule Heilbronn</a>, where I teach <a href="/articles/Messparkour-Sv2">Signal Processing 2</a> and <a href="/articles/realtime-systems">Realtime Systems</a>, along with handling various other responsibilities at the university.</p>
+  
+  <p>I started deadlinedriven.dev to provide students with tutorials and insights into exciting technical projects. Here, I share my knowledge, experiences, and journey from concept to completion.</p>
+  
+  <p>I publish diverse content in the <a href="/blog">blog section</a>, where you can find tutorials, instructions, and more.</p>
+</div>
