--- a/nuxt-app/content/1.index.md
+++ b/nuxt-app/content/1.index.md
@@ -32,7 +32,7 @@ title: About
 </div>
 
 <div class="textbox textbox--primary">
-  <p>I'm currently an academic assistant at <a href="https://www.hs-heilbronn.de/en">Hochschule Heilbronn</a>, where I teach <a href="/articles/messparkour-sv2">Signal Processing 2</a> and <a href="/articles/realtime-systems">Realtime Systems</a>, along with handling various other responsibilities at the university.</p>
+  <p>I'm currently an academic assistant at <a href="https://www.hs-heilbronn.de/en">Hochschule Heilbronn</a>, where I teach <a href="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pdf/SignalVerarbeitung2ModulHandbuch.pdf">Signal Processing 2</a> and <a href="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pdf/RealTImeSystemsModulHandbuch.pdf">Realtime Systems</a>, along with handling various other responsibilities at the university.</p>
   
   <p>I started deadlinedriven.dev to provide students with tutorials and insights into exciting technical projects. Here, I share my knowledge, experiences, and journey from concept to completion.</p>
   
