--- a/nuxt-app/content/1.index.md
+++ b/nuxt-app/content/1.index.md
@@ -31,10 +31,10 @@ title: About
   </div>
 </div>
 
-<div class="textbox textbox--primary">
+<div class="textbox textbox--secondary">
   <p>I'm currently an academic assistant at <a href="https://www.hs-heilbronn.de/en">Hochschule Heilbronn</a>, where I teach <a href="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pdf/SignalVerarbeitung2ModulHandbuch.pdf">Signal Processing 2</a> and <a href="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pdf/RealTImeSystemsModulHandbuch.pdf">Realtime Systems</a>, along with handling various other responsibilities at the university.</p>
   
   <p>I started deadlinedriven.dev to provide students with tutorials and insights into exciting technical projects. Here, I share my knowledge, experiences, and journey from concept to completion.</p>
   
-  <p>I publish diverse content in the <a href="/articles">blog section</a>, where you can find tutorials, instructions, and more.</p>
+  <p>I publish diverse content in the <a href="/articles">article section</a>, where you can find tutorials, instructions, and more.</p>
 </div>
