--- a/nuxt-app/content/articles/5.Algo-vertretung-14-04-25.md
+++ b/nuxt-app/content/articles/5.Algo-vertretung-14-04-25.md
@@ -1,5 +1,5 @@
 ---
-cover: 
+cover: https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/Presentation_with_marp/Pics/Gothic3Map%20-%20Zahlen%20-%20NN.PNG?raw=true
 author:
   name: Marc Nauendorf
   avatarUrl: https://pbs.twimg.com/profile_images/1042510623962275840/1Iw_Mvud_400x400.jpg
