--- a/nuxt-app/content/articles/5.Algo-vertretung-14-04-25.md
+++ b/nuxt-app/content/articles/5.Algo-vertretung-14-04-25.md
@@ -5,7 +5,7 @@ author:
   avatarUrl: https://pbs.twimg.com/profile_images/1042510623962275840/1Iw_Mvud_400x400.jpg
 date: 2025-04-23T00:00:00.000Z
 layout: page
-description: "Brute-Force, Nearest Neighbor, and christofilf algorithm | Traveling Salesman Problem (TSP)"
+description: "Brute-Force, Nearest Neighbor, and christofilf algorithm "
 ---
 
 # Traveling Salesman Problem (TSP)
