--- a/nuxt-app/content/articles/6.Neural-Style-Transfer.md
+++ b/nuxt-app/content/articles/6.Neural-Style-Transfer.md
@@ -5,7 +5,7 @@ author:
     avatarUrl: https://pbs.twimg.com/profile_images/1042510623962275840/1Iw_Mvud_400x400.jpg
 date: 2025-04-23T00:00:00.000Z
 layout: page
-description: Deep Learning Assignment with TensorFlow
+description: Fusion of 2 Pictures. The goal is to create a new image that combines the two styles.
 tags:
     - jupyter_notebook
     - TensorFlow
