--- a/nuxt-app/content/articles/6.Neural-Style-Transfer.md
+++ b/nuxt-app/content/articles/6.Neural-Style-Transfer.md
@@ -2,7 +2,6 @@
 cover: https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/jupyter/generated_creation%20of%20adam_with_mosaik.jpg?raw=true
 author:
     name: Marc Nauendorf
-    avatarUrl: https://pbs.twimg.com/profile_images/1042510623962275840/1Iw_Mvud_400x400.jpg
 date: 2025-04-23T00:00:00.000Z
 layout: page
 description: Fusion of 2 Pictures. The goal is to create a new image that combines the two styles.
@@ -31,7 +30,7 @@ tags:
 
 <div style="display: flex; align-items: flex-start;">
     <div style="flex: 0 0 30%; text-align: center;">
-        <img src="https://raw.githubusercontent.com/Nr44suessauer/nr44suessauer.github.io/7c2c25b5f8ff496ce9876de4ca38563947168868/nuxt-app/assets/pictures/svg/1717856636_BraveHearth.jpg.svg" alt="Inverted SVG of BraveHeart" style="width: 100%; max-width: 225px; height: auto; border: 1px solid #ddd; border-radius: 0px; filter: invert(1);">
+        <img src="https://raw.githubusercontent.com/Nr44suessauer/nr44suessauer.github.io/main/nuxt-app/assets/pictures/svg/1717856636_BraveHearth.jpg.svg" alt="Inverted SVG of BraveHeart" style="width: 100%; max-width: 225px; height: auto; border: 1px solid #ddd; border-radius: 0px; filter: invert(1);">
     </div>
     <div style="flex: 1; padding-left: 20px;">
         <p>The Future is then to <strong>convert these generated images into SVG files</strong>. These <a href="https://en.wikipedia.org/wiki/SVG">SVGs</a> can later be used in applications like <a href="https://www.autodesk.com/de/products/fusion-360/overview?term=1-YEAR&tab=subscription#top">Fusion 360</a> <a href="https://de.wikipedia.org/wiki/Liste_von_CAD-Programmen">(or similar software)</a> to extrude the designs, thereby creating files that <strong>can be 3D printed, laser cut, or manufactured by other means</strong>.</p>
@@ -53,7 +52,7 @@ tags:
         <p>Colors are not really necessary for my model. However, if you aim to create this mosaic window, a colorful vision might be appreciated. The <strong>next step</strong> will involve combining black-and-white mosaic images with colored content images to focus on the essentials. For later, with 1(B&W) instead of 3 dimensions(RGB)</p>
     </div>
     <div style="flex: 0 0 auto; margin-left: 20px; width: 35%;">
-        <img src="https://github.com/Nr44suessauer/DeepLearning_assignment2/blob/main/DeepLearning_assignment3/generated_creation%20of%20adam_with_mosaik.jpg?raw=true" alt="Neural Style Mosaic" style="width: 100%; height: auto;">
+        <img src="https://raw.githubusercontent.com/Nr44suessauer/DeepLearning_assignment2/main/DeepLearning_assignment3/generated_creation%20of%20adam_with_mosaik.jpg" alt="Neural Style Mosaic" style="width: 100%; height: auto;" loading="lazy">
     </div>
 </div>
 
@@ -76,35 +75,35 @@ Please note that if you plan to push this further, it is recommended to use a GP
 
 <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
     <div style="flex: 0 1 45%; max-width: 45%;">
-        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/jupyter/generated/BraveHeart.png?raw=true" alt="Best Result" style="width: 100%; height: auto;">
+        <img src="https://raw.githubusercontent.com/Nr44suessauer/nr44suessauer.github.io/main/nuxt-app/assets/pictures/jupyter/generated/BraveHeart.png" alt="Best Result" style="width: 100%; height: auto;" loading="lazy">
         <p style="text-align: center; font-size: 0.9em;"></p>
     </div>
     <div style="flex: 0 1 45%; max-width: 45%;">
-        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/jupyter/generated/Generated_revan.png?raw=true" alt="Chobi 10 Steps" style="width: 100%; height: auto;">
+        <img src="https://raw.githubusercontent.com/Nr44suessauer/nr44suessauer.github.io/main/nuxt-app/assets/pictures/jupyter/generated/Generated_revan.png" alt="Chobi 10 Steps" style="width: 100%; height: auto;" loading="lazy">
         <p style="text-align: center; font-size: 0.9em;"></p>
     </div>
     <div style="flex: 0 1 45%; max-width: 45%;">
-        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/jupyter/generated/MyHeroGenerated.png?raw=true" alt="Composition 7 with Red" style="width: 100%; height: auto;">
+        <img src="https://raw.githubusercontent.com/Nr44suessauer/nr44suessauer.github.io/main/nuxt-app/assets/pictures/jupyter/generated/MyHeroGenerated.png" alt="Composition 7 with Red" style="width: 100%; height: auto;" loading="lazy">
         <p style="text-align: center; font-size: 0.9em;"></p>
     </div>
     <div style="flex: 0 1 45%; max-width: 45%;">
-        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/jupyter/generated/spongebob_generated.png?raw=true" alt="Great Wave at Kanagawa" style="width: 100%; height: auto;">
+        <img src="https://raw.githubusercontent.com/Nr44suessauer/nr44suessauer.github.io/main/nuxt-app/assets/pictures/jupyter/generated/spongebob_generated.png" alt="Great Wave at Kanagawa" style="width: 100%; height: auto;" loading="lazy">
         <p style="text-align: center; font-size: 0.9em;"></p>
     </div>
     <div style="flex: 0 1 45%; max-width: 45%;">
-        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/jupyter/generated/starwars_generated.png?raw=true" alt="Creation of Adam with Mosaic" style="width: 100%; height: auto;">
+        <img src="https://raw.githubusercontent.com/Nr44suessauer/nr44suessauer.github.io/main/nuxt-app/assets/pictures/jupyter/generated/starwars_generated.png" alt="Creation of Adam with Mosaic" style="width: 100%; height: auto;" loading="lazy">
         <p style="text-align: center; font-size: 0.9em;"></p>
     </div>
     <div style="flex: 0 1 45%; max-width: 45%;">
-        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/jupyter/generated/torfin_generated.png?raw=true" alt="Mona Lisa with Mosaic" style="width: 100%; height: auto;">
+        <img src="https://raw.githubusercontent.com/Nr44suessauer/nr44suessauer.github.io/main/nuxt-app/assets/pictures/jupyter/generated/torfin_generated.png" alt="Mona Lisa with Mosaic" style="width: 100%; height: auto;" loading="lazy">
         <p style="text-align: center; font-size: 0.9em;"></p>
     </div>
     <div style="flex: 0 1 45%; max-width: 45%;">
-        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/jupyter/generated/vader.png?raw=true" alt="Starry Night" style="width: 100%; height: auto;">
+        <img src="https://raw.githubusercontent.com/Nr44suessauer/nr44suessauer.github.io/main/nuxt-app/assets/pictures/jupyter/generated/vader.png" alt="Starry Night" style="width: 100%; height: auto;" loading="lazy">
         <p style="text-align: center; font-size: 0.9em;"></p>
     </div>
     <div style="flex: 0 1 45%; max-width: 45%;">
-        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/jupyter/generated/vader2.png?raw=true" alt="Tubingen with Starry Night" style="width: 100%; height: auto;">
+        <img src="https://raw.githubusercontent.com/Nr44suessauer/nr44suessauer.github.io/main/nuxt-app/assets/pictures/jupyter/generated/vader2.png" alt="Tubingen with Starry Night" style="width: 100%; height: auto;" loading="lazy">
         <p style="text-align: center; font-size: 0.9em;"></p>
     </div>
 </div>
@@ -127,7 +126,8 @@ To create mosaic windows, I first tried a direct approach with my Configurator. 
         src="https://nbviewer.org/github/Nr44suessauer/DeepLearning_assignment2/blob/main/DeepLearning_assignment3/Assignment_3_mnauendo.ipynb" 
         width="100%" 
         height="800px" 
-        style="border: 1px solid #ddd; border-radius: 5px; overflow: hidden;">
+        style="border: 1px solid #ddd; border-radius: 5px; overflow: hidden;"
+        loading="lazy">
     </iframe>
     <p style="text-align: center; margin-top: 10px;">
     </p>
