--- a/nuxt-app/content/articles/6.Neural-Style-Transfer.md
+++ b/nuxt-app/content/articles/6.Neural-Style-Transfer.md
@@ -124,7 +124,7 @@ To create mosaic windows, I first tried a direct approach with my Configurator. 
 <div class="notebook-container" style="margin-top: 20px; margin-bottom: 20px;">
     <details>
         <summary style="cursor: pointer; font-weight: bold; padding: 10px; background-color: #f0f0f0; border: 1px solid #ccc; border-radius: 5px; color: #000;">
-            Jupyter Notebook: SalesMan Problem Neuste & Complete Version (Click to Show/Hide)
+            Jupyter Notebook: Complete Version (Click to Show/Hide)
         </summary>
         <div style="border: 1px solid #ddd; padding: 15px; margin-top: 10px; background-color: #f9f9f9; color: #000;">
             <iframe
