--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -5,3 +5,13 @@ description: A journey to North Macedonia for "AI in Education of Future Profess
 layout: article
 order: 5
 ---
+
+# AI in Education for Future Professionals
+
+A journey to North Macedonia for "AI in Education of Future Professionals" with a visit/work to/in S.E.E.U.
+
+## Photo Gallery
+
+Here are some memorable moments from our journey:
+
+<BipPhotoGallery />
