--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -15,3 +15,19 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
 Here are some memorable moments from our journey:
 
 <BipPhotoGallery />
+
+## Program Documents
+
+Access the official BIP program documentation:
+
+<BipPdfViewer />
+
+### BIP 2025 Program Documentation
+
+**Official Program Document:**
+- [📄 BIP 2025 Program - S.E.E.U. V3](https://github.com/Nr44suessauer/nr44suessauer.github.io/raw/main/nuxt-app/assets/pdf/BIP/BIP-2025-program_SEEU_V3.pdf) - Official program documentation for the BIP 2025 exchange at South East European University
+
+**Program Output:**
+- [📄 BIP Output Document](https://github.com/Nr44suessauer/nr44suessauer.github.io/raw/main/nuxt-app/assets/pdf/BIP/output_bip.pdf) - Summary and output documentation from the BIP program
+
+*Note: Click the links above to download or view the PDF documents. If the download doesn't work, you can also [view them on GitHub](https://github.com/Nr44suessauer/nr44suessauer.github.io/tree/main/nuxt-app/assets/pdf/BIP).*
