--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -10,137 +10,45 @@ order: 5
 
 A journey to North Macedonia for "AI in Education of Future Professionals" with a visit/work to/in S.E.E.U.
 
+
+## Program Documents
+
+View the official BIP 2025 program documentation and output side by side:
+
+<div style="display: flex; gap: 20px; margin: 20px 0; justify-content: center;">
+    <div style="width: 350px;">
+        <h3 style="text-align: center; margin-bottom: 15px;">Program Documentation</h3>
+        <iframe 
+            src="https://docs.google.com/viewer?url=https://github.com/Nr44suessauer/nr44suessauer.github.io/raw/main/nuxt-app/public/assets/pdf/BIP/BIP-2025-program_SEEU_V3.pdf&embedded=true" 
+            width="350px" 
+            height="495px" 
+            style="border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+        </iframe>
+        <p style="text-align: center; margin-top: 15px;">
+            <a href="/assets/pdf/BIP/BIP-2025-program_SEEU_V3.pdf" target="_blank" style="padding: 10px 20px; background: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px;">
+                 Download Flyer PDF
+            </a>
+        </p>
+    </div>
+    <div style="width: 350px;">
+        <h3 style="text-align: center; margin-bottom: 15px;">Output Documentation</h3>
+        <iframe 
+            src="https://docs.google.com/viewer?url=https://github.com/Nr44suessauer/nr44suessauer.github.io/raw/main/nuxt-app/public/assets/pdf/BIP/output_bip.pdf&embedded=true" 
+            width="350px" 
+            height="495px" 
+            style="border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+        </iframe>
+        <p style="text-align: center; margin-top: 15px;">
+            <a href="/assets/pdf/BIP/output_bip.pdf" target="_blank" style="padding: 10px 20px; background: #28a745; color: white; text-decoration: none; border-radius: 5px; font-size: 14px;">
+                Download Paper Output
+            </a>
+        </p>
+    </div>
+</div>
+
+
 ## Photo Gallery
 
 Here are some memorable moments from our journey:
-
 <BipPhotoGallery />
 
-## Program Document
-
-View the official BIP 2025 program documentation:
-
-<div class="document-section">
-  <div class="document-card">
-    <div class="document-icon">📄</div>
-    <div class="document-info">
-      <h3>BIP 2025 Program - S.E.E.U. V3</h3>
-      <p>Official program documentation for the BIP 2025 exchange at South East European University</p>
-      <div class="document-actions">
-        <a href="/BIP-2025-program_SEEU_V3.pdf" target="_blank" class="btn-view">
-          👁️ PDF anzeigen
-        </a>
-        <a href="https://github.com/Nr44suessauer/nr44suessauer.github.io/raw/main/nuxt-app/assets/pdf/BIP/BIP-2025-program_SEEU_V3.pdf" target="_blank" class="btn-download">
-          📥 Herunterladen
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<style>
-.document-section {
-  margin: 30px 0;
-}
-
-.document-card {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  padding: 25px;
-  background: white;
-  border: 1px solid #e1e4e8;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  transition: box-shadow 0.3s ease;
-}
-
-.document-card:hover {
-  box-shadow: 0 4px 16px rgba(0,0,0,0.15);
-}
-
-.document-icon {
-  font-size: 3rem;
-  background: #f8f9fa;
-  padding: 20px;
-  border-radius: 8px;
-  color: #0969da;
-}
-
-.document-info {
-  flex: 1;
-}
-
-.document-info h3 {
-  margin: 0 0 8px 0;
-  color: #1f2328;
-  font-size: 1.4rem;
-  font-weight: 600;
-}
-
-.document-info p {
-  margin: 0 0 20px 0;
-  color: #656d76;
-  line-height: 1.5;
-}
-
-.document-actions {
-  display: flex;
-  gap: 12px;
-  flex-wrap: wrap;
-}
-
-.btn-view,
-.btn-download {
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  padding: 10px 18px;
-  border-radius: 8px;
-  text-decoration: none;
-  font-weight: 500;
-  transition: all 0.3s ease;
-}
-
-.btn-view {
-  background: #0969da;
-  color: white;
-}
-
-.btn-view:hover {
-  background: #0550ae;
-  transform: translateY(-2px);
-}
-
-.btn-download {
-  background: #f3f4f6;
-  color: #656d76;
-  border: 1px solid #d0d7de;
-}
-
-.btn-download:hover {
-  background: #e9ecef;
-  color: #1f2328;
-  transform: translateY(-2px);
-}
-
-@media (max-width: 768px) {
-  .document-card {
-    flex-direction: column;
-    text-align: center;
-    gap: 15px;
-  }
-  
-  .document-actions {
-    width: 100%;
-    justify-content: center;
-  }
-  
-  .btn-view,
-  .btn-download {
-    flex: 1;
-    justify-content: center;
-    min-width: 140px;
-  }
-}
-</style>
