--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -15,31 +15,31 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
 
 View the official BIP 2025 program documentation and output side by side:
 
-<div style="display: flex; gap: 20px; margin: 20px 0; justify-content: center;">
-    <div style="width: 350px;">
-        <h3 style="text-align: center; margin-bottom: 15px;">Program Documentation</h3>
+<div style="display: flex; gap: 14px; margin: 15px 0; justify-content: center;">
+    <div style="width: 278px;">
+        <h4 style="text-align: center; margin-bottom: 10px; font-size: 16px;">Program Documentation</h4>
         <iframe 
             src="https://docs.google.com/viewer?url=https://github.com/Nr44suessauer/nr44suessauer.github.io/raw/main/nuxt-app/public/assets/pdf/BIP/BIP-2025-program_SEEU_V3.pdf&embedded=true" 
-            width="350px" 
-            height="495px" 
-            style="border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+            width="278px" 
+            height="359px" 
+            style="border: 1px solid #ddd; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
         </iframe>
-        <p style="text-align: center; margin-top: 15px;">
-            <a href="/assets/pdf/BIP/BIP-2025-program_SEEU_V3.pdf" target="_blank" style="padding: 10px 20px; background: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px;">
-                 Download Flyer PDF
+        <p style="text-align: center; margin-top: 10px;">
+            <a href="/assets/pdf/BIP/BIP-2025-program_SEEU_V3.pdf" target="_blank" style="padding: 4px 8px; background: #007bff; color: white; text-decoration: none; border-radius: 4px; font-size: 11px;">
+                 Download Flyer
             </a>
         </p>
     </div>
-    <div style="width: 350px;">
-        <h3 style="text-align: center; margin-bottom: 15px;">Output Documentation</h3>
+    <div style="width: 278px;">
+        <h4 style="text-align: center; margin-bottom: 10px; font-size: 16px;">Output Documentation</h4>
         <iframe 
             src="https://docs.google.com/viewer?url=https://github.com/Nr44suessauer/nr44suessauer.github.io/raw/main/nuxt-app/public/assets/pdf/BIP/output_bip.pdf&embedded=true" 
-            width="350px" 
-            height="495px" 
-            style="border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+            width="278px" 
+            height="359px" 
+            style="border: 1px solid #ddd; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
         </iframe>
-        <p style="text-align: center; margin-top: 15px;">
-            <a href="/assets/pdf/BIP/output_bip.pdf" target="_blank" style="padding: 10px 20px; background: #28a745; color: white; text-decoration: none; border-radius: 5px; font-size: 14px;">
+        <p style="text-align: center; margin-top: 10px;">
+            <a href="/assets/pdf/BIP/output_bip.pdf" target="_blank" style="padding: 4px 8px; background: #28a745; color: white; text-decoration: none; border-radius: 4px; font-size: 11px;">
                 Download Paper Output
             </a>
         </p>
