--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -12,6 +12,17 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
 
 ![Schedule](https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/Schedule.PNG?raw=true)
 
+<div style="display: flex; align-items: center; gap: 20px; margin: 20px 0;">
+    <div style="flex: 1;">
+        <p style="font-size: 12px;">North Macedonia is a landlocked country on the Balkan Peninsula, covering 25,713 square kilometers. To put its size in perspective: it is similar in area to the German federal state of Mecklenburg-Vorpommern, which is slightly smaller. Compared to all of Germany, which spans about 357,600 square kilometers, North Macedonia would fit into Germany roughly 14 times.</p>
+        <p style="font-size: 12px;">For an even more visual comparison, North Macedonia's territory would fit approximately 3.67 million football (soccer) fields.</p>
+        <p style="font-size: 12px;">The capital city is Skopje, which is also the largest city in the country. Our educational journey took us to both Skopje and the lakeside city of Ohrid, allowing us to experience the rich cultural heritage.</p>
+    </div>
+    <div style="flex: 0 0 300px;">
+        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/macedoniaMap.png?raw=true" alt="North Macedonia Map" style="width: 100%; height: auto; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" />
+    </div>
+</div>
+
 <h2 style="margin-bottom: 5px;">Documents</h2>
 <div style="display: flex; gap: 5px; margin: 10px 0; justify-content: center;">
     <div style="width: 278px;">
