--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -8,7 +8,7 @@ order: 5
 
 # AI in Education for Future Professionals
 
-A journey to North Macedonia for "AI in Education of Future Professionals" with a visit/work to/in S.E.E.U.
+A journey to North Macedonia for "AI in Education of Future Professionals" with a visit/work to/in S.E.E.U. 
 
 ![Schedule](https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/Schedule.PNG?raw=true)
 
@@ -22,6 +22,10 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
         <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/macedoniaMap.png?raw=true" alt="North Macedonia Map" style="width: 100%; height: auto; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" />
     </div>
 </div>
+
+<p style="font-size: 12px;">Our journey began in Ohrid at Hotel Tino, where we immediately connected with the our teams to outline our program. It was a dynamic first day: we formed our groups, dove into lively discussions about our core topic, and got to know the other participants. The agenda was packed, with a series of engaging workshops and meetings focused on our chosen subject running until Wednesday.</p>
+
+
 
 <h2 style="margin-bottom: 5px;">Documents</h2>
 <div style="display: flex; gap: 5px; margin: 10px 0; justify-content: center;">
