--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -25,7 +25,19 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
 
 <p style="font-size: 12px;">Our journey began in Ohrid at Hotel Tino, where we immediately connected with the our teams to outline our program. It was a dynamic first day: we formed our groups, dove into lively discussions about our core topic, and got to know the other participants. The agenda was packed, with a series of engaging workshops and meetings focused on our chosen subject running until Wednesday.</p>
 
+<div style="margin: 20px 0;">
+  <div style="position: relative; max-width: 600px; margin: 0 auto; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2px;">
+      <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/ohridWork/HotelTino2.JPG?raw=true" alt="Hotel Tino - View 2" style="width: 100%; height: 250px; object-fit: cover;" />
+      <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/ohridWork/HotelTino1.JPG?raw=true" alt="Hotel Tino - View 1" style="width: 100%; height: 250px; object-fit: cover;" />
+    </div>
+  </div>
+  <p style="text-align: center; margin-top: 10px; font-size: 14px; color: #666;">Hotel Tino, our workplace in Ohrid</p>
+</div>
 
+
+
+---
 
 <h2 style="margin-bottom: 5px;">Documents</h2>
 <div style="display: flex; gap: 5px; margin: 10px 0; justify-content: center;">
