--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -2,9 +2,15 @@
 cover: https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/GroupPic.JPG?raw=true
 date: 2025-06-28T00:00:00.000Z
 description: A journey to North Macedonia for "AI in Education of Future Professionals" with a visit/work to/in S.E.E.U.
-layout: article
+layout: article_backup
 order: 5
 ---
+
+<style>
+:root {
+  --article-font-size: 14px;
+}
+</style>
 
 # AI in Education for Future Professionals
 
@@ -12,20 +18,19 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
 
 <div style="display: flex; align-items: center; gap: 20px; margin: 20px 0;">
     <div style="flex: 1;">
-        <p style="font-size: 12px;">North Macedonia is a landlocked country on the Balkan Peninsula, covering 25,713 square kilometers. To put its size in perspective: it is similar in area to the German federal state of Mecklenburg-Vorpommern, which is slightly smaller. Compared to all of Germany, which spans about 357,600 square kilometers, North Macedonia would fit into Germany roughly 14 times.</p>
-        <p style="font-size: 12px;">For an even more visual comparison, North Macedonia's territory would fit approximately 3.67 million football (soccer) fields.</p>
-        <p style="font-size: 12px;">The capital city is Skopje, which is also the largest city in the country. Our educational journey took us to both Skopje and the lakeside city of Ohrid, allowing us to experience the rich cultural heritage.</p>
+        <p style="font-size: var(--article-font-size);">North Macedonia is a landlocked country on the Balkan Peninsula, covering 25,713 square kilometers. To put its size in perspective: it is similar in area to the German federal state of Mecklenburg-Vorpommern, which is slightly smaller. Compared to all of Germany, which spans about 357,600 square kilometers, North Macedonia would fit into Germany roughly 14 times. For an even more visual comparison, North Macedonia's territory would fit approximately 3.67 million football (soccer) fields.</p>
+        <p style="font-size: var(--article-font-size);">The capital city is Skopje, which is also the largest city in the country. Our educational journey took us to both Skopje and the lakeside city of Ohrid, allowing us to experience the rich cultural heritage.</p>
+        <p style="font-size: var(--article-font-size);">Our journey began in Ohrid at Hotel Tino, where we immediately connected with our teams to outline our program. It was a dynamic first day: we formed our groups, dove into lively discussions about our core topic, and got to know the other participants. The agenda was packed, with a series of engaging meetings focused on our chosen subject running until Wednesday.</p>
     </div>
     <div style="flex: 0 0 300px;">
         <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/macedoniaMap.png?raw=true" alt="North Macedonia Map" style="width: 100%; height: auto; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" />
     </div>
 </div>
 
-<p style="font-size: 12px;">Our journey began in Ohrid at Hotel Tino, where we immediately connected with the our teams to outline our program. It was a dynamic first day: we formed our groups, dove into lively discussions about our core topic, and got to know the other participants. The agenda was packed, with a series of engaging workshops and meetings focused on our chosen subject running until Wednesday.</p>
-
 <HotelTinoGallery></HotelTinoGallery>
 
 ---
+
 
 ![Schedule](https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/Schedule.PNG?raw=true)
 
