--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -31,6 +31,13 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
 
 ---
 
+Our self definded roadmap for the week was ambitious. 
+Because it was clear that only the given time in the program were not enough to cover all the topics we wanted to address, 
+we had to make some adjustments, over the week. 
+We decided to take the first two days for the research of AI used in education. The Topic of my group was "AI based Personalized Learning in Higher Education"
+
+Wednesday was dedicated to travel from Ohrid to Skopje, where we visited the South East European University (SEEU). 
+An journey of 
 
 ![Schedule](https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/Schedule.PNG?raw=true)
 
@@ -55,7 +62,7 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
         </p>
     </div>
     <div style="width: 278px;">
-        <h4 style="text-align: center; margin-bottom: 10px; font-size: 16px;">Output Documentation</h4>
+        <h4 style="text-align: center; margin-bottom: 10px; font-size: 16px;">Documentation</h4>
         <iframe 
             src="https://docs.google.com/viewer?url=https://github.com/Nr44suessauer/nr44suessauer.github.io/raw/main/nuxt-app/public/assets/pdf/BIP/output_bip.pdf&embedded=true" 
             width="278px" 
@@ -68,6 +75,21 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
             </a>
         </p>
     </div>
+</div>
+
+<div style="margin: 20px 0;">
+    <h4 style="text-align: center; margin-bottom: 10px; font-size: 16px;">Presentation</h4>
+    <iframe 
+        src="https://docs.google.com/viewer?url=https://github.com/Nr44suessauer/nr44suessauer.github.io/raw/main/nuxt-app/public/assets/pdf/BIP/BIP%20Presentation.pdf&embedded=true" 
+        width="100%" 
+        height="500px" 
+        style="border: 1px solid #ddd; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+    </iframe>
+    <p style="text-align: center; margin-top: 10px;">
+        <a href="/assets/pdf/BIP/BIP Presentation.pdf" target="_blank" style="padding: 4px 8px; background: #17a2b8; color: white; text-decoration: none; border-radius: 4px; font-size: 11px;">
+            Fullscreen View
+        </a>
+    </p>
 </div>
 
 
