--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -36,12 +36,20 @@ Because it was clear that only the given time in the program were not enough to 
 we had to make some adjustments, over the week. 
 We decided to take the first two days for the research of AI used in education. The Topic of my group was "AI based Personalized Learning in Higher Education"
 
-Wednesday was dedicated to travel from Ohrid to Skopje, where we visited the South East European University (SEEU). 
-An journey of 
+
 
 ![Schedule](https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/Schedule.PNG?raw=true)
 
+---
 
+<div style="display: flex; align-items: center; gap: 20px; margin: 20px 0;">
+    <div style="flex: 0 0 300px;">
+        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/mapstravelday.PNG?raw=true" alt="Travel Route Map" style="width: 100%; height: auto; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" />
+    </div>
+    <div style="flex: 1;">
+        <p style="font-size: var(--article-font-size);">Wednesday was dedicated to travel from Ohrid to Skopje, where we visited the South East European University (SEEU). A journey of 200 kilometers, with 43degree Celsius with a stop at "Sventi Jovan Bigorski".</p>
+    </div>
+</div>
 
 ---
 
