--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -47,9 +47,11 @@ We decided to take the first two days for the research of AI used in education. 
         <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/mapstravelday.PNG?raw=true" alt="Travel Route Map" style="width: 100%; height: auto; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" />
     </div>
     <div style="flex: 1;">
-        <p style="font-size: var(--article-font-size);">Wednesday was dedicated to travel from Ohrid to Skopje, where we visited the South East European University (SEEU). A journey of 200 kilometers, with 43degree Celsius with a stop at "Sventi Jovan Bigorski".</p>
+        <p style="font-size: var(--article-font-size);">Wednesday was dedicated to travel from Ohrid to Skopje, where we visited the South East European University (SEEU). A journey of 200 kilometers, with 43 degree Celsius with a stop at "Sventi Jovan Bigorski". This was the time for seeing the beautiful nature of North Macedonia, with its stunning lakes and mountains. Roads run through the mountain landscapes.</p>
     </div>
 </div>
+
+<TravelImages></TravelImages>
 
 ---
 
