--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -18,8 +18,8 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
 
 <div style="display: flex; align-items: center; gap: 20px; margin: 20px 0;">
     <div style="flex: 1;">
-        <p style="font-size: var(--article-font-size);">North Macedonia is a landlocked country on the Balkan Peninsula, covering 25,713 square kilometers. To put its size in perspective: it is similar in area to the German federal state of Mecklenburg-Vorpommern, which is slightly smaller. Compared to all of Germany, which spans about 357,600 square kilometers, North Macedonia would fit into Germany roughly 14 times. For an even more visual comparison, North Macedonia's territory would fit approximately 3.67 million football (soccer) fields.</p>
-        <p style="font-size: var(--article-font-size);">The capital city is Skopje, which is also the largest city in the country. Our educational journey took us to both Skopje and the lakeside city of Ohrid, allowing us to experience the rich cultural heritage.</p>
+        <p style="font-size: var(--article-font-size);"><a href="https://en.wikipedia.org/wiki/Macedonia" target="_blank">North Macedonia</a> is a landlocked country on the Balkan Peninsula, covering 25,713 square kilometers. To put its size in perspective: it is similar in area to the German federal state of Mecklenburg-Vorpommern, which is slightly smaller. Compared to all of Germany, which spans about 357,600 square kilometers, North Macedonia would fit into Germany roughly 14 times. For an even more visual comparison, North Macedonia's territory would fit approximately 3.67 million football (soccer) fields.</p>
+        <p style="font-size: var(--article-font-size);">The capital city is <a href="https://de.wikipedia.org/wiki/Region_Skopje" target="_blank">Skopje</a>, which is also the largest city in the country. Our educational journey took us to both Skopje and the lakeside city of <a href="https://search.brave.com/images?q=ohrid" target="_blank">Ohrid</a>, allowing us to experience the rich cultural heritage.</p>
         <p style="font-size: var(--article-font-size);">Our journey began in Ohrid at Hotel Tino, where we immediately connected with our teams to outline our program. It was a dynamic first day: we formed our groups, dove into lively discussions about our core topic, and got to know the other participants. The agenda was packed, with a series of engaging meetings focused on our chosen subject running until Wednesday.</p>
     </div>
     <div style="flex: 0 0 300px;">
@@ -30,15 +30,18 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
 <HotelTinoGallery></HotelTinoGallery>
 
 ---
+<div style="display: flex; align-items: center; gap: 20px; margin: 20px 0;">
+    <div style="flex: 1;">
+        <p style="font-size: var(--article-font-size);">Our self defined roadmap for the week was ambitious. 
+        Because it was clear that only the given time in the program were not enough to cover all the topics we wanted to address, 
+        we had to make some adjustments, over the week. 
+        We decided to take the first two days for the research of AI used in education. The Topic of my group was "AI based Personalized Learning in Higher Education"</p>
+    </div>
+    <div style="flex: 0 0 500px;">
+        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/Schedule.PNG?raw=true" alt="Schedule" style="width: 100%; height: auto; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" />
+    </div>
+</div>
 
-Our self definded roadmap for the week was ambitious. 
-Because it was clear that only the given time in the program were not enough to cover all the topics we wanted to address, 
-we had to make some adjustments, over the week. 
-We decided to take the first two days for the research of AI used in education. The Topic of my group was "AI based Personalized Learning in Higher Education"
-
-
-
-![Schedule](https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/Schedule.PNG?raw=true)
 
 ---
 
