--- a/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
+++ b/nuxt-app/content/articles/11.AI-in-Education-for-Future-Professionals.md
@@ -64,9 +64,41 @@ A journey to North Macedonia for "AI in Education of Future Professionals" with 
 <TravelImages></TravelImages>
 
 ---
+<div style="display: flex; align-items: center; gap: 20px; margin: 20px 0;">
+    <div style="flex: 1;">
+        <p style="font-size: var(--article-font-size);">Thursday was the day of the writing and preparing the presentations. The Seeu University is in the center of Skopje, 
+        where we had the opportunity to work and grab some food. Around of the university there are many restaurants and cafes, 
+        and sight seeing opportunities.</p>
+    </div>
+    <div style="flex: 0 0 300px;">
+        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/AlexandertheBIgone.JPG?raw=true" alt="Alexander the Great Statue" style="width: 100%; height: auto; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" />
+    </div>
+</div>
+
+In the evening we had a dinner with the professors, 
+where we could exchange ideas and experiences. Generally, the colaboration with the students 
+and professors from the partner universities was very fruitful and inspiring. The participating universities:
+- <a href="https://www.hs-heilbronn.de/en" target="_blank">Hochschule Heilbronn (HHN)</a> from Germany
+- <a href="https://www.upv.es/index-en.html" target="_blank">Universitat Politècnica de València (UPV)</a> from Spain  
+- <a href="https://www.ubbcluj.ro/en/" target="_blank">Universitatea Babeș-Bolyai</a> from Romania
+- <a href="https://www.ua.es/en/" target="_blank">Universidad de Alicante</a> from Spain
+- <a href="https://www.seeu.edu.mk/en" target="_blank">South East European University (SEEU)</a> from North Macedonia
 
 
 
+<SeeUImages></SeeUImages>
+
+---
+
+<div style="display: flex; align-items: center; gap: 20px; margin: 20px 0;">
+    <div style="flex: 1;">
+        <p style="font-size: var(--article-font-size);">Friday was the presentation day, where all groups presented their research findings. Our group focused on "AI-based Personalized Learning in Higher Education" and delivered our insights to the international audience. The presentations were followed by discussions and feedback sessions, creating a rich learning environment for all participants.</p>
+        <p style="font-size: var(--article-font-size);">The week concluded with a visit to the statue of Alexander the Great in central Skopje, one of the city's most prominent landmarks. This monumental statue stands as a symbol of the country's historical heritage and provided a fitting end to our educational journey.</p>
+    </div>
+    <div style="flex: 0 0 300px;">
+        <img src="https://github.com/Nr44suessauer/nr44suessauer.github.io/blob/main/nuxt-app/assets/pictures/BIP/AlexandertheBIgone.JPG?raw=true" alt="Alexander the Great Statue" style="width: 100%; height: auto; border-radius: 6px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" />
+    </div>
+</div>
 
 ---
 
