download links für software ollama

--- a/nuxt-app/content/articles/10.Ollama-intruduction.md
+++ b/nuxt-app/content/articles/10.Ollama-intruduction.md
@@ -6,13 +6,22 @@ layout: article_backup
 order: 2
 ---
 
-<div style="display: flex; align-items: center;">
-    <img src="https://imgs.search.brave.com/8xshJuTEcdDh4ATRrUMvxIB39O6v3yf7382wqSkPcWg/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4u/YnJhbmRmZXRjaC5p/by9pZHJSRG1aMl9G/L3cvMTgwL2gvMTgw/L3RoZW1lL2xpZ2h0/L2xvZ28ucG5nP2M9/MWJ4aWQ2NE11cDdh/Y3pld1NBWU1YJnQ9/MTc0Nzc0NDA3MTE3/OA" alt="Ollama Logo" style="height: 80px; margin-right: 20px;" />
-    <a href="https://ollama.com/download" style="font-size: 1.2em;">Ollama Download</a>
-</div>
-
-<div style="display: flex; align-items: center;">
-    <img src="https://www.python.org/static/community_logos/python-logo.png" alt="Python Logo" style="height: 80px; margin-right: 20px;" />
-    <a href="https://www.python.org/downloads/" style="font-size: 1.2em;">Python Download</a>
-</div>
-
+<table>
+    <tr>
+        <td align="center" style="width: 180px;">
+            <img src="https://www.python.org/static/community_logos/python-logo.png" alt="Python Logo" style="max-width: 100px; max-height: 80px; display: block; margin: 0 auto;">
+            <br>
+            <a href="https://www.python.org/downloads/">Python Download</a>
+        </td>
+        <td align="center" style="width: 180px;">
+            <img src="https://imgs.search.brave.com/8xshJuTEcdDh4ATRrUMvxIB39O6v3yf7382wqSkPcWg/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4u/YnJhbmRmZXRjaC5p/by9pZHJSRG1aMl9G/L3cvMTgwL2gvMTgw/L3RoZW1lL2xpZ2h0/L2xvZ28ucG5nP2M9/MWJ4aWQ2NE11cDdh/Y3pld1NBWU1YJnQ9/MTc0Nzc0NDA3MTE3/OA" alt="Ollama Logo" style="max-width: 100px; max-height: 80px; display: block; margin: 0 auto;">
+            <br>
+            <a href="https://ollama.com/download">Ollama Download</a>
+        </td>
+        <td align="center" style="width: 180px;">
+            <img src="https://imgs.search.brave.com/zLvtdX6w_dNUl6wAzFN-0BCdZQrJu7VkSySkbESjtsc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy9i/L2I5L052aWRpYV9D/VURBX0xvZ28uanBn" alt="CUDA Logo" style="max-width: 100px; max-height: 80px; display: block; margin: 0 auto;">
+            <br>
+            <a href="https://developer.nvidia.com/cuda-downloads?target_os=Windows">CUDA Download</a>
+        </td>
+    </tr>
+</table>
