download links für software ollama

--- a/nuxt-app/content/articles/10.Ollama-intruduction.md
+++ b/nuxt-app/content/articles/10.Ollama-intruduction.md
@@ -6,6 +6,8 @@ layout: article_backup
 order: 2
 ---
 
+### Nessesary Software
+
 <table>
     <tr>
         <td align="center" style="width: 180px;">
@@ -25,3 +27,46 @@ order: 2
         </td>
     </tr>
 </table>
+
+---
+
+<nav>
+    <ul style="display: flex; list-style: none; padding: 0; gap: 24px; font-size: 1.1em;">
+        <li><a href="#vorbereitung" onclick="showSection(1); return false;">Vorbereitung</a></li>
+        <li><a href="#einrichtung" onclick="showSection(2); return false;">Einrichtung</a></li>
+        <li><a href="#modell-spielplatz" onclick="showSection(3); return false;">Modell-Spielplatz</a></li>
+        <li><a href="#fehlerbehebung" onclick="showSection(4); return false;">Fehlerbehebung</a></li>
+    </ul>
+</nav>
+
+<div id="section-content" style="border: 1px solid #ddd; padding: 20px; margin-top: 16px; border-radius: 8px;">
+<!-- Initial Content: Vorbereitung -->
+<h3 id="vorbereitung">Vorbereitung</h3>
+<p>
+    Bevor du beginnst, stelle sicher, dass dein PC die Mindestanforderungen für KI-Modelle erfüllt. Installiere die oben genannten Programme und prüfe, ob deine Grafikkarte CUDA unterstützt.
+</p>
+</div>
+
+<script>
+function showSection(idx) {
+    const sections = [
+        `<h3 id="vorbereitung">Vorbereitung</h3>
+        <p>
+            Bevor du beginnst, stelle sicher, dass dein PC die Mindestanforderungen für KI-Modelle erfüllt. Installiere die oben genannten Programme und prüfe, ob deine Grafikkarte CUDA unterstützt.
+        </p>`,
+        `<h3 id="einrichtung">Einrichtung</h3>
+        <p>
+            Lade die benötigte Software herunter und installiere sie Schritt für Schritt. Starte Ollama nach der Installation und prüfe, ob der Dienst läuft. Überprüfe, ob Python und CUDA korrekt eingerichtet sind, damit die KI-Modelle optimal funktionieren.
+        </p>`,
+        `<h3 id="modell-spielplatz">Modell-Spielplatz</h3>
+        <p>
+            Teste verschiedene KI-Modelle in Ollama. Experimentiere mit Einstellungen und beobachte die Leistung auf deinem System.
+        </p>`,
+        `<h3 id="fehlerbehebung">Fehlerbehebung</h3>
+        <p>
+            Bei Problemen prüfe die Installationen, Treiber und Konsolen-Ausgaben. Sieh in die Dokumentation oder frage in Foren nach Hilfe.
+        </p>`
+    ];
+    document.getElementById('section-content').innerHTML = sections[idx-1];
+}
+</script>
