--- a/nuxt-app/content/articles/10.Ollama-intruduction.md
+++ b/nuxt-app/content/articles/10.Ollama-intruduction.md
@@ -2,7 +2,7 @@
 cover: https://imgs.search.brave.com/8xshJuTEcdDh4ATRrUMvxIB39O6v3yf7382wqSkPcWg/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4u/YnJhbmRmZXRjaC5p/by9pZHJSRG1aMl9G/L3cvMTgwL2gvMTgw/L3RoZW1lL2xpZ2h0/L2xvZ28ucG5nP2M9/MWJ4aWQ2NE11cDdh/Y3pld1NBWU1YJnQ9/MTc0Nzc0NDA3MTE3/OA
 date: 2024-07-28T00:00:00.000Z
 description: How To run AI Models on your own PC | Beginner Guide
-layout: article_backup
+layout: default
 order: 2
 ---
 
@@ -30,43 +30,5 @@ order: 2
 
 ---
 
-<nav>
-    <ul style="display: flex; list-style: none; padding: 0; gap: 24px; font-size: 1.1em;">
-        <li><a href="#vorbereitung" onclick="showSection(1); return false;">Vorbereitung</a></li>
-        <li><a href="#einrichtung" onclick="showSection(2); return false;">Einrichtung</a></li>
-        <li><a href="#modell-spielplatz" onclick="showSection(3); return false;">Modell-Spielplatz</a></li>
-        <li><a href="#fehlerbehebung" onclick="showSection(4); return false;">Fehlerbehebung</a></li>
-    </ul>
-</nav>
 
-<div id="section-content" style="border: 1px solid #ddd; padding: 20px; margin-top: 16px; border-radius: 8px;">
-<!-- Initial Content: Vorbereitung -->
-<h3 id="vorbereitung">Vorbereitung</h3>
-<p>
-    Bevor du beginnst, stelle sicher, dass dein PC die Mindestanforderungen für KI-Modelle erfüllt. Installiere die oben genannten Programme und prüfe, ob deine Grafikkarte CUDA unterstützt.
-</p>
-</div>
-
-<script>
-function showSection(idx) {
-    const sections = [
-        `<h3 id="vorbereitung">Vorbereitung</h3>
-        <p>
-            Bevor du beginnst, stelle sicher, dass dein PC die Mindestanforderungen für KI-Modelle erfüllt. Installiere die oben genannten Programme und prüfe, ob deine Grafikkarte CUDA unterstützt.
-        </p>`,
-        `<h3 id="einrichtung">Einrichtung</h3>
-        <p>
-            Lade die benötigte Software herunter und installiere sie Schritt für Schritt. Starte Ollama nach der Installation und prüfe, ob der Dienst läuft. Überprüfe, ob Python und CUDA korrekt eingerichtet sind, damit die KI-Modelle optimal funktionieren.
-        </p>`,
-        `<h3 id="modell-spielplatz">Modell-Spielplatz</h3>
-        <p>
-            Teste verschiedene KI-Modelle in Ollama. Experimentiere mit Einstellungen und beobachte die Leistung auf deinem System.
-        </p>`,
-        `<h3 id="fehlerbehebung">Fehlerbehebung</h3>
-        <p>
-            Bei Problemen prüfe die Installationen, Treiber und Konsolen-Ausgaben. Sieh in die Dokumentation oder frage in Foren nach Hilfe.
-        </p>`
-    ];
-    document.getElementById('section-content').innerHTML = sections[idx-1];
-}
-</script>
+<client-only><OllamaNavbar /></client-only>
